Added parameter symbol mapping to api
